--- a/Super Data Platform Team Co-op Case Study.ipynb
+++ b/Super Data Platform Team Co-op Case Study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 78,
    "id": "5b0c255d-5fa2-4bdb-a34b-fceaff214337",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 79,
    "id": "3290d0bb-9cc0-433b-8a3b-6859c1eb97f9",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 80,
    "id": "14507f50-6fc9-4666-82fc-6d169ab16c5a",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 81,
    "id": "77991589-ca4c-4f7c-a18d-c39cc545955d",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 82,
    "id": "c00fe2bb-6bee-45ec-b624-068938d3cb11",
    "metadata": {},
    "outputs": [
@@ -88,32 +88,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Airline Code    DelayTimes  FlightCodes      From         To\n",
-      "0      Air Canada (!)      [21, 40]        20015  WATERLOO    NEWYORK\n",
-      "1   <Air France> (12)            []        20025  MONTREAL    TORONTO\n",
-      "2  (Porter Airways. )  [60, 22, 87]        20035   CALGARY     OTTAWA\n",
-      "3      12. Air France      [78, 66]        20045    OTTAWA  VANCOUVER\n",
-      "4   \".\\.Lufthansa.\\.\"      [12, 33]        20055    LONDON   MONTREAL\n"
+      "         Airline Code    DelayTimes       From        To\n",
+      "0      Air Canada (!)      [21, 40]    NEWYORK  WATERLOO\n",
+      "1   <Air France> (12)            []    TORONTO  MONTREAL\n",
+      "2  (Porter Airways. )  [60, 22, 87]     OTTAWA   CALGARY\n",
+      "3      12. Air France      [78, 66]  VANCOUVER    OTTAWA\n",
+      "4   \".\\.Lufthansa.\\.\"      [12, 33]   MONTREAL    LONDON\n"
      ]
     }
    ],
    "source": [
     "# Split To_From column into two seperate columns on '_'\n",
-    "df[['From', 'To']] = df['To_From'].str.split('_', expand=True)\n",
+    "df[['To', 'From']] = df['To_From'].str.split('_', expand=True)\n",
+    "\n",
+    "# Swap the 'To' and 'From' columns\n",
+    "df = df[['Airline Code', 'DelayTimes', 'From', 'To']]\n",
     "\n",
     "# Convert both new column into uppercase\n",
-    "df['From'] = df['From'].str.upper()\n",
     "df['To'] = df['To'].str.upper()\n",
-    "\n",
-    "# Drop the original To_From Column since it is no longer needed \n",
-    "df = df.drop(columns=['To_From'])\n",
+    "df['From'] = df['From'].str.upper()\n",
     "\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 83,
    "id": "e43ff8eb-6f20-4142-be9f-b69346bb6107",
    "metadata": {},
    "outputs": [
@@ -121,12 +121,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Airline Code    DelayTimes  FlightCodes      From         To\n",
-      "0      Air Canada      [21, 40]        20015  WATERLOO    NEWYORK\n",
-      "1   Air France 12            []        20025  MONTREAL    TORONTO\n",
-      "2  Porter Airways  [60, 22, 87]        20035   CALGARY     OTTAWA\n",
-      "3   12 Air France      [78, 66]        20045    OTTAWA  VANCOUVER\n",
-      "4       Lufthansa      [12, 33]        20055    LONDON   MONTREAL\n"
+      "     Airline Code    DelayTimes       From        To\n",
+      "0      Air Canada      [21, 40]    NEWYORK  WATERLOO\n",
+      "1   Air France 12            []    TORONTO  MONTREAL\n",
+      "2  Porter Airways  [60, 22, 87]     OTTAWA   CALGARY\n",
+      "3   12 Air France      [78, 66]  VANCOUVER    OTTAWA\n",
+      "4       Lufthansa      [12, 33]   MONTREAL    LONDON\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "6110c9c0-8f5d-41aa-9bd2-e21b7cf87874",
    "metadata": {},
    "outputs": [],
